concord_macros/tests/trybuild/fail/codegen/stream_endpoint_execute_multipart.stderr
error[E0599]: the method `execute_multipart` exists for struct `PendingRequest<'_, StreamEndpointExecuteMultipartApiCx, EpDownloadHd3386a2ef42e80b9, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen/stream_endpoint_execute_multipart.rs:16:28
   |
 5 | / api! {
 6 | |     client StreamEndpointExecuteMultipartApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET Download
   | |________________- doesn't satisfy `_: MultipartResponseEndpoint<StreamEndpointExecuteMultipartApiCx>`
...
16 |       let _ = api.download().execute_multipart().await.unwrap();
   |                              ^^^^^^^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `EpDownloadHd3386a2ef42e80b9: MultipartResponseEndpoint<StreamEndpointExecuteMultipartApiCx>`
note: the trait `MultipartResponseEndpoint` must be implemented
  --> $WORKSPACE/concord_core/src/endpoint.rs
   |
   | pub trait MultipartResponseEndpoint<Cx: ClientContext>: Endpoint<Cx> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
